@@ -25,7 +25,6 @@ import org.springframework.web.bind.annotation.RequestBody;
 import java.util.Date;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Service
 public class AuthService {
@@ -36,7 +35,6 @@ public class AuthService {
     private final AuthenticationManager authenticationManager;
     private final JwtService jwtService;
     private final PasswordEncoder encoder;
-    private final ResourceLoader resourceLoader;
 
     public AuthService(PersonRepository personRepository, UserRepository userRepository, UserTypeRepository userTypeRepository, StudentRepository studentRepository,AuthenticationManager authenticationManager, JwtService jwtService, PasswordEncoder encoder, ResourceLoader resourceLoader) {
         this.personRepository = personRepository;
@@ -46,7 +44,6 @@ public class AuthService {
         this.authenticationManager = authenticationManager;
         this.jwtService = jwtService;
         this.encoder = encoder;
-        this.resourceLoader = resourceLoader;
     }
     public ResponseEntity<?> authenticateUser(LoginRequest loginRequest) {
 
@@ -58,7 +55,7 @@ public class AuthService {
         UserDetailsImpl userDetails = (UserDetailsImpl) authentication.getPrincipal();
         List<String> roles = userDetails.getAuthorities().stream()
                 .map(GrantedAuthority::getAuthority)
-                .collect(Collectors.toList());
+                .toList();
         Optional<User> op= userRepository.findByUserName(loginRequest.getUsername());
         if(op.isPresent()) {
             User user= op.get();
@@ -75,7 +72,7 @@ public class AuthService {
                 userDetails.getId(),
                 userDetails.getUsername(),
                 userDetails.getPerName(),
-                roles.get(0)));
+                roles.getFirst()));
     }
     public DataResponse getValidateCode(DataRequest dataRequest) {
         return CommonMethod.getReturnData(LoginControlUtil.getInstance().getValidateCodeDataMap());
@@ -85,7 +82,7 @@ public class AuthService {
         Integer validateCodeId = dataRequest.getInteger("validateCodeId");
         String validateCode = dataRequest.getString("validateCode");
         LoginControlUtil li =  LoginControlUtil.getInstance();
-        if(validateCodeId == null || validateCode== null || validateCode.length() == 0) {
+        if(validateCodeId == null || validateCode== null || validateCode.isEmpty()) {
             return CommonMethod.getReturnMessageError("验证码为空！");
         }
         String value = li.getValidateCode(validateCodeId);
@@ -93,10 +90,8 @@ public class AuthService {
             return CommonMethod.getReturnMessageError("验证码错位！");
         return CommonMethod.getReturnMessageOK();
     }
-    /**
+    /*
      *  注册用户示例，我们项目暂时不用， 所有用户通过管理员添加，这里注册，没有考虑关联人员信息的创建，使用时参加学生添加功能的实现
-     * @param registerUser
-     * @return
      */
     @PostMapping("/registerUser")
     public DataResponse registerUser(@Valid @RequestBody DataRequest dataRequest) {
